<resources>
    <string name="app_name">Weather App</string>

    <string name="required_field">This field is required</string>
    <string name="storage_permission_dialog_message">Access storage permission is required to save user locations</string>
    <string name="storage_permission_dialog_title">Permissions required</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_main">Weather</string>
    <string name="title_weather">Weather</string>
    <string name="title_location">Location</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <string name="temp_celsius">%s°C</string>
    <string name="temp_celsius_widget">%s°</string>
    <string name="temp_fahrenheit">%s°F</string>
    <string name="feels_like_temp_celsius">Feels like %s°C</string>
    <string name="feels_like_temp_fahrenheit">Feels like %s°F</string>
    <string name="speed_km">%s KM/H</string>
    <string name="speed_miles">%s M/H</string>
    <string name="loading_dialog_text">Loading</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">UV Index</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="sun">Sun</string>
    <string name="sunrise_sunset">Rise %s\nSet %s</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_km">%s KM</string>
    <string name="title_add_location">Add Location</string>
    <string name="city_name">City name</string>
    <string name="add_location">Add</string>
    <string name="cant_delete_current_location">You can\'t delete this location</string>

    <string name="notification_title">%s° | %s</string>
    <string name="notification_short_details">%s. Feels like %s°C</string>
    <string name="notification_long_details">%s\nFeels like %s°C\nTemp min %s°C - max %s°C\nRain possibility %s%%</string>
    <string name="location_name">%1$s/%2$s</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="gps">GPS</string>

    <string name="add_location_button_content_description">Add location</string>

</resources>